--- a/Pages/Publishers/Index.cshtml
+++ b/Pages/Publishers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id:int?}"
 @model Ardelean_Victor_Dan_Lab2.Pages.Publishers.IndexModel
 
 @{
@@ -20,12 +20,16 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Publisher) {
-        <tr>
+        @foreach (var item in Model.PublisherData.Publishers)
+        {
+        string selectedRow = "";
+        if (item.ID == Model.PublisherID)
+        {
+        selectedRow = "table-success";
+        }
+        <tr class="@selectedRow">
             <td>
-                @Html.DisplayFor(modelItem => item.PublisherName)
-            </td>
-            <td>
+                <a asp-page="./Index" asp-route-id="@item.ID">Select</a> |
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
                 <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
@@ -34,3 +38,24 @@
 }
     </tbody>
 </table>
+@if (Model.PublisherData.Books != null)
+{
+    <h3>Books published by selected publisher</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var book in Model.PublisherData.Books)
+            {
+                <tr>
+                    <td>@book.Title</td>
+                    <td>@(book.Author?.LastName + " " + book.Author?.FirstName)</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
