--- a/Pages/Books/Index.cshtml
+++ b/Pages/Books/Index.cshtml
@@ -8,10 +8,10 @@
 <h1>Books</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" class="btn btn-primary">Create New</a>
 </p>
 
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
@@ -36,42 +36,53 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.BookD.Books)
-{
-    string selectedRow = "";
-    if (item.ID == Model.BookID)
-    {
-        selectedRow = "table-success";
-    }
-
-    <tr class="@selectedRow">
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-             @(item.Author?.LastName + " " + item.Author?.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PublishingDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Publisher.PublisherName)
-        </td>
-        <td>
-            @foreach (var category in item.BookCategories)
+        @foreach (var item in Model.BookD.Books)
+        {
+            string selectedRow = "";
+            if (item.ID == Model.BookID)
             {
-                @category.Category.CategoryName <br />
+                selectedRow = "table-success";
             }
-        </td>
-        <td>
-            <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-            <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-            <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-        </td>
-    </tr>
-}
+
+            <tr class="@selectedRow">
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @(item.Author != null 
+                        ? $"{item.Author.LastName} {item.Author.FirstName}" 
+                        : "Unknown Author")
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PublishingDate)
+                </td>
+                <td>
+                    @(item.Publisher != null 
+                        ? item.Publisher.PublisherName 
+                        : "No Publisher")
+                </td>
+                <td>
+                    @if (item.BookCategories != null && item.BookCategories.Any())
+                    {
+                        foreach (var category in item.BookCategories)
+                        {
+                            @category.Category.CategoryName <br />
+                        }
+                    }
+                    else
+                    {
+                        <span>No Categories</span>
+                    }
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
